# claw-quant

./: .gitignore  CLAUDE.md  CONTEXT.md  README.md  fisher_state.md  pyproject.toml  sfm_state.md
.github/workflows/: validate.yml
claw_quant/: __init__.py  ab_test.py  agent_interface.py  calibration.py  config.py  data_akshare.py  data_factory.py  data_hybrid.py  data_provider.py  data_synthetic.py  data_wind.py  database.py  fisher_automation.py  freshness.py  graham_engine.py  markowitz_engine.py  metrics_tracker.py  pipeline.py  refresh.py  scheduler.py  sfm_engine.py  sfm_updater.py  state_init.py  synthetic.py  validation.py  validation_loop.py  walkthrough.py
claw_quant/backtest/: __init__.py  data_loader.py  engine.py  performance.py  report.py
docs/: architecture-overview.html
docs/adr/: 0008-cbc-simulator.md  (+11 more)
portfolio/: capital_allocation_registry.md  damodaran_state.md
scripts/: carhart_regression.py  cffex_scraper.py  factor_ic_engine.py  init_ci_data.py  long_short_cost.py  options_proxy.py  requirements.txt
templates/: capital_allocation_registry_template.md  damodaran_state_template.md  holdings_template.yaml  thesis_template.md
tests/: conftest.py  helpers.py  test_backtest_engine.py  test_capital_allocation_registry.py  test_carhart_regression.py  test_damodaran_state.py  test_factor_ic_engine.py  test_fisher_state.py  test_holdings_template.py  test_hybrid_provider.py  test_pipeline.py  test_refresh.py  test_state_files.py  test_thesis_template.py  test_validation.py  test_walkthrough.py
world/: intelligence_source_registry.yaml
