[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claw-quant"
version = "0.1.0"
description = "Multi-layer investment agent framework for A-share equities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
akshare = [
    "akshare>=1.14.0",
]

[tool.setuptools.packages.find]
include = ["claw_quant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["claw_quant", "scripts"]
omit = ["tests/*"]